--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1,9 +1,9 @@
 html{box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}
 *,:after,:before{box-sizing:inherit;-moz-box-sizing:inherit;-webkit-box-sizing:inherit}
-html{font-size:62.5%;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;text-size-adjust:none}
+html{font-size:14px;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;text-size-adjust:none}
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,main,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0}
 main{display:block}
-ul{list-style:none}
+/*ul{list-style:none}*/
 table{border-collapse:collapse;border-spacing:0}
 td{text-align:left;font-weight:400;vertical-align:middle}
 button{outline:0;padding:0;background:transparent;border:none;font-size:inherit}
@@ -40,15 +40,36 @@ a{-webkit-transition:color .25s;transition:color .25s}
 .js .header:before{-webkit-transition:background .6s;transition:background .6s}
 .button .icon{-webkit-transition:background .25s;transition:background .25s}
 body{color:rgba(0,0,0,.87)}
-@supports (-webkit-appearance:none){body{background:#e84e40}
-}
+/*@supports (-webkit-appearance:none){body{background:#e84e40}
+}*/
 .ios body{background:#fff}
 hr{border:0;border-top:1px solid rgba(0,0,0,.12)}
 .toggle-button{cursor:pointer;color:inherit}
-.backdrop,.backdrop-paper{background:#fff}
+/*.backdrop,.backdrop-paper{background:#fff}*/
 .overlay{background:rgba(0,0,0,.54);opacity:0}
 #toggle-drawer:checked~.overlay,.toggle-drawer .overlay{opacity:1}
-.header{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);background:#e84e40;color:#fff}
+.header{
+  box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);
+  background:#fff;
+
+}
+.header::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 52px;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 4px;
+  z-index: 1;
+  background-image: radial-gradient(circle farthest-corner at left bottom, #e94f90 0%, rgba(233, 79, 144, .01) 100%), radial-gradient(circle farthest-corner at right bottom, #287bf4 0%, rgba(40, 123, 244, .01) 100%);
+}
+.header nav {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .ios.standalone .header:before{background:rgba(0,0,0,.12)}
 .bar .path{color:hsla(0,0%,100%,.7)}
 .button .icon{border-radius:100%}
@@ -62,16 +83,15 @@ hr{display:block;height:1px;padding:0;margin:0}
 .ios .scrollable .wrapper{margin-bottom:2px}
 .toggle{display:none}
 .toggle-button{display:block}
-.backdrop{position:absolute;top:0;right:0;bottom:0;left:0;z-index:-1}
+/*.backdrop{position:absolute;top:0;right:0;bottom:0;left:0;z-index:-1}
 .backdrop-paper{max-width:1200px;height:100%;margin-left:auto;margin-right:auto}
-.backdrop-paper:after{content:" ";display:block;height:100%;margin-left:262px}
+.backdrop-paper:after{content:" ";display:block;height:100%;margin-left:262px}*/
 .overlay{width:0;height:0;z-index:3}
 .header,.overlay{position:fixed;top:0}
-.header{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;left:0;z-index:2;height:56px;padding:4px;overflow:hidden}
+.header{width:100%;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;left:0;z-index:2;height:56px;padding:4px;overflow:hidden}
 .ios.standalone .header{position:absolute}
 .bar{display:table;max-width:1184px;margin-left:auto;margin-right:auto}
-.bar a{display:block}
-.no-js .bar .button-search{display:none}
+.bar a{display:block}width:100%;.no-js .bar .button-search{display:none}
 .bar .path .icon:before{vertical-align:-1.5px}
 .button{display:table-cell;vertical-align:top;width:1%}
 .button button{margin:0;padding:0}
@@ -81,42 +101,42 @@ hr{display:block;height:1px;padding:0;margin:0}
 .header .stretch{padding:0 20px}
 .stretch .title{display:table-cell;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
 .header .stretch .title{font-size:18px;padding:13px 0}
-.main{max-width:1200px;margin-left:auto;margin-right:auto}
+.main{display:flex;max-width:1300px;margin-left:auto;margin-right:auto}
 body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 .no-fontface body,.no-fontface input,body,input{font-family:Helvetica Neue,Helvetica,Arial,sans-serif}
 .no-fontface code,.no-fontface kbd,.no-fontface pre,code,kbd,pre{font-family:Courier New,Courier,monospace}
 #toggle-drawer:checked~.main .drawer,.toggle-drawer .drawer{-webkit-transform:translateZ(0);transform:translateZ(0)}
 .no-csstransforms3d #toggle-drawer:checked~.main .drawer,.no-csstransforms3d .toggle-drawer .drawer{display:block}
-.project{-webkit-transition:none;transition:none}
-.project .logo img{-webkit-transition:box-shadow .4s;transition:box-shadow .4s}
+/*.project{-webkit-transition:none;transition:none}
+.project .logo img{-webkit-transition:box-shadow .4s;transition:box-shadow .4s}*/
 .repo a{-webkit-transition:box-shadow .4s,opacity .4s;transition:box-shadow .4s,opacity .4s}
 .drawer .toc a.current,.drawer .toc a:focus,.drawer .toc a:hover{color:#e84e40}
 .drawer .anchor a{border-left:2px solid #e84e40}
 .drawer .section{color:rgba(0,0,0,.54)}
 .ios.standalone .project:before{background:rgba(0,0,0,.12)}
-.project .logo img{background:#fff;border-radius:100%}
-.project:focus .logo img,.project:hover .logo img{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05)}
+/*.project .logo img{background:#fff;border-radius:100%}
+.project:focus .logo img,.project:hover .logo img{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05)}*/
 .repo a{background:#00bfa5;color:#fff;border-radius:3px}
 .repo a:focus,.repo a:hover{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05);opacity:.8}
 .repo a .count{background:rgba(0,0,0,.26);color:#fff;border-radius:0 3px 3px 0}
 .repo a .count:before{border-width:15px 5px 15px 0;border-color:transparent rgba(0,0,0,.26);border-style:solid}
-.drawer{width:262px;font-size:13px;line-height:1em}
+.drawer{height:100%; overflow:auto; margin-bottom: 80px;width:280px;line-height:1em;border-right: 1px solid #e6e6e6;}
 .ios .drawer{overflow:scroll;-webkit-overflow-scrolling:touch}
 .drawer .toc li a{display:block;padding:14.5px 24px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .drawer .toc li.anchor a{margin-left:12px;padding:10px 24px 10px 12px}
 .drawer .toc li ul{margin-left:12px}
 .drawer .current+ul{margin-bottom:9px}
 .drawer .section{display:block;padding:14.5px 24px}
-.drawer .scrollable{top:104px;z-index:-1}
+.drawer .scrollable{position:static;top:104px;z-index:-1}
 .drawer .scrollable .wrapper{height:auto;min-height:100%}
 .drawer .scrollable .wrapper hr{margin:12px 0;margin-right:auto}
 .drawer .scrollable .wrapper .toc{margin:12px 0}
-.project{display:block}
+/*.project{display:block}
 .project .banner{display:table;width:100%;height:104px;padding:20px}
 .project .logo{display:table-cell;width:64px;padding-right:12px}
 .project .logo img{display:block;width:64px;height:64px}
 .project .name{display:table-cell;padding-left:4px;font-size:14px;line-height:1.25em;vertical-align:middle}
-.project .logo+.name{font-size:12px}
+.project .logo+.name{font-size:12px}*/
 .repo{margin:24px 0;text-align:center}
 .repo li{display:inline-block;padding-right:12px;white-space:nowrap}
 .repo li:last-child{padding-right:0}
@@ -137,7 +157,7 @@ pre span{-webkit-transition:color .25s;transition:color .25s}
 .article a,.article h1,.article h2{color:#e84e40}
 .article code{background:#eee}
 .article kbd{color:#555;background-color:#fcfcfc;border:1px solid #ccc;border-bottom-color:#bbb;border-radius:3px;box-shadow:inset 0 -1px 0 #bbb}
-.article h1{border-bottom:1px solid rgba(0,0,0,.12)}
+/*.article h1{border-bottom:1px solid rgba(0,0,0,.12)}*/
 .article a{border-bottom:1px dotted}
 .article a:focus,.article a:hover{color:#00bfa5}
 .article .headerlink{color:rgba(0,0,0,.26);border:none}
@@ -145,7 +165,19 @@ pre span{-webkit-transition:color .25s;transition:color .25s}
 .article table th{background:#ee7a70;color:#fff}
 .article table td{border-top:1px solid rgba(0,0,0,.05)}
 .article blockquote{border-left:2px solid rgba(0,0,0,.54);color:rgba(0,0,0,.54)}
-.footer{background:#e84e40;color:#fff}
+/*.footer{background:#e84e40;color:#fff}*/
+.footer::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 4px;
+  z-index: 1;
+  background-image: radial-gradient(circle farthest-corner at left bottom, #e94f90 0%, rgba(233, 79, 144, .01) 100%), radial-gradient(circle farthest-corner at right bottom, #287bf4 0%, rgba(40, 123, 244, .01) 100%);
+}
 .footer a{border:none}
 .copyright{color:rgba(0,0,0,.54)}
 .pagination a .button,.pagination a .title{color:#fff}
@@ -156,7 +188,7 @@ pre span{-webkit-transition:color .25s;transition:color .25s}
 .admonition a,.admonition a:hover{color:#fff}
 .article{font-size:14px;line-height:1.7em}
 .article:after{content:" ";display:block;clear:both}
-.article .wrapper{padding:116px 16px 92px}
+.article .wrapper{padding:0px 16px 92px;margin-top: 90px;}
 .ios.standalone .article{position:absolute;top:56px;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}
 .ios.standalone .article .wrapper{position:relative;min-height:100%;padding-top:60px;margin-bottom:2px}
 .article h1{font-size:24px;line-height:1.333334em;padding:20px 0 42px}
@@ -170,7 +202,7 @@ h1 .article .headerlink{display:none}
 .article li,.article li ol,.article li ul{margin-top:.75em}
 .article li{margin-left:18px}
 .article li p{display:inline}
-.article ul>li:before{content:"\e602";display:block;float:left;font-family:Icon;font-size:16px;width:1.2em;margin-left:-1.2em;vertical-align:-.1em}
+/*.article ul>li:before{content:"\e602";display:block;float:left;font-family:Icon;font-size:16px;width:1.2em;margin-left:-1.2em;vertical-align:-.1em}*/
 .article p>code{white-space:nowrap;padding:2px 4px}
 .article kbd{display:inline-block;padding:3px 5px;line-height:10px}
 .article hr{margin-top:1.5em}
@@ -183,9 +215,39 @@ h1 .article .headerlink{display:none}
 .article blockquote{padding-left:16px}
 .article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
 .article .data table{display:inline-block;margin:0 16px;text-align:left}
-.footer{position:absolute;bottom:0;left:0;right:0;padding:0 4px}
-.copyright{margin:1.5em 0}
-.pagination{max-width:1184px;height:92px;padding:4px 0;margin-left:auto;margin-right:auto;overflow:hidden}
+.footer {
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+  padding:0 4px;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height:92px
+}
+.previous, .next {
+    font-size: 120%;
+    display: flex;
+    flex-basis:15%;
+    align-self: flex-end;
+    min-width: 80px;
+    padding: 10px;
+}
+.next {
+    justify-content : flex-end;
+}
+.prevbutton {font-size: 200%;}
+.prevpage {align-self: flex-end;}
+.nextbutton {text-align: right; font-size: 200%; }
+.nextpage {align-self: flex-end;}
+#footercenter {display:flex; flex-direction:row; font-size: 120%; margin-top: 20px; line-height: 1.5em;}
+#footerlinks {display:flex; flex-basis: auto; padding-left: 20px;}
+#footerlinks ul li {display: inline-block; margin-right: 1em;}
+#footerlinks ul li a{padding-right: 0.3em; }
+#footercopyright {width: 50%; padding-left: 20px;}
+/*.copyright{margin:1.5em 0}*/
+/*.pagination{max-width:1184px;height:92px;padding:4px 0;margin-left:auto;margin-right:auto;overflow:hidden}
 .pagination a{display:block;height:100%}
 .pagination .next,.pagination .previous{position:relative;float:left;height:100%}
 .pagination .previous{width:25%}
@@ -194,7 +256,7 @@ h1 .article .headerlink{display:none}
 .pagination .page{display:table;position:absolute;bottom:4px}
 .pagination .direction{display:block;position:absolute;bottom:40px;width:100%;font-size:15px;line-height:20px;padding:0 52px}
 .pagination .stretch{padding:0 4px}
-.pagination .stretch .title{font-size:14px;padding:11px 0 13px}
+.pagination .stretch .title{font-size:14px;padding:11px 0 13px}*/
 .admonition{margin:20px -16px 0;padding:20px 16px}
 .admonition>:first-child{margin-top:0}
 .admonition .admonition-title{font-size:20px}
@@ -220,7 +282,7 @@ h1 .article .headerlink{display:none}
 .bar.search .query:-moz-placeholder,.bar.search .query::-moz-placeholder{color:rgba(0,0,0,.26)}
 .bar.search .query:-ms-input-placeholder{color:rgba(0,0,0,.26)}
 .bar.search .button .icon:active{background:rgba(0,0,0,.12)}
-.results{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05);background:#fff;color:rgba(0,0,0,.87);opacity:0}
+/*.results{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05);background:#fff;color:rgba(0,0,0,.87);opacity:0}*/
 #toggle-search:checked~.main .results,.toggle-search .results{opacity:1}
 .results .meta{background:#e84e40;color:#fff}
 .results .list a{border-bottom:1px solid rgba(0,0,0,.12)}
@@ -248,7 +310,223 @@ h1 .article .headerlink{display:none}
 .no-csstransforms3d #toggle-search:checked~.main .results,.no-csstransforms3d .toggle-search .results{display:block;overflow:auto}
 .meta{text-transform:uppercase;font-weight:700}
 
-@media only screen and (min-width:960px){
+.header-logo-base{
+  width: 300px;
+  float:left;
+}
+.header-logo{
+  padding:5px;
+  width: 245px;
+  height:53px;
+}
+/*検索ボックス*/
+.searchbox {
+  float: right;
+  width: 28em;
+  height: 36px;
+  margin-top: 6px;
+  margin-right: 6px;
+  box-sizing: border-box;
+  border: 1px solid #e6e6e6;
+  position: relative;
+  border-radius: 4px;
+}
+#headerSearchBox_form {
+  height: 100%;
+}
+#headerSearchBox_input {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 63px 0 12px;
+  border: none;
+  color: #a7a7a7;
+  background-color: #f6f6f6;
+  float: left;
+}
+#headerSearchBox_button {
+  height: 100%;
+  width: 52px;
+  background: url(/img/header_search.png) no-repeat center center #f0f0f0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  cursor: pointer;
+}
+/*言語選択*/
+.langselector {
+    margin-top: 3px;
+    width: 100px;
+    font-size: 1em;
+    white-space: nowrap;
+    float: right;
+    list-style-type: none;
+    padding: 3px;
+}
+#langlist {
+    width: 80px;
+    float: right;
+}
+#langlist li a:hover {
+    font-weight: bold;
+}
+/*パンくず*/
+.breadcrumbs {
+  font-size: 80%;
+}
+.breadcrumbs ul {
+  list-style-type: none;
+}
+.breadcrumbs li {
+  display: inline;
+  margin-left: 0px;
+}
+.breadcrumbs li:after {
+    font-family: icon;
+    content: "\E602";
+    font-weight: bold;
+}
+.breadcrumbs li:last-child:after {
+  content: '';
+}
+#sidebar-toc {
+    position: fixed;
+    /*right: 0px;*/
+    width: 200px;
+    height: 100%;
+    padding-top: 60px;
+    /*float: right;*/
+    overflow: auto;
+    /*background-color: #eeeeee;*/
+    /*font-size: 12px;*/
+    line-height: 13px;
+    margin-left: 1100px;
+}
+
+#TableOfContents li {
+    margin-left:12px;
+    padding: 3px;
+    cursor: pointer;
+    padding-top: 5px;
+}
+
+#TableOfContents li a:before{
+    font-family: icon;
+    content:"\e602";
+}
+
+#TableOfContents li a {
+   color: #777777;
+   text-decoration: none;
+   border-bottom: 0px;
+}
+
+#TableOfContents li a:hover {
+    color:#e84e40;
+}
+
+#TableOfContents li a.current {
+    font-weight: bold;
+    color: #e84e40;
+}
+
+#TableOfContents ul ul ul {
+  display: none;
+}
+
+#mainmenu {
+    display: block;
+    margin-bottom: 30px;
+}
+
+#mainmenu li {
+  margin-left:12px;
+  padding: 0px;
+  border-top: 1px solid #e6e6e6;
+  cursor: pointer;
+}
+
+#mainmenu li span::after {
+    font-family: icon;
+    content: "\E602";
+    font-weight: bold;
+    color: #e84e40;
+}
+
+#mainmenu li span.closed{
+    transform: rotate(0deg);
+}
+
+#mainmenu li span.expand{
+    transform: rotate(90deg);
+}
+
+#mainmenu li a {
+  display: inline-block;
+  margin: 15px 0;
+}
+
+#mainmenu li a:hover{
+    color: #e84e40;
+}
+
+#mainmenu li a.current{
+    font-weight: bold;
+    color: #e84e40;
+}
+
+#mainmenu li ul{
+    display: none;
+}
+
+#mainmenu li ul.opened{
+    display: block;
+}
+
+#mainmenu li ul li{
+    border-left: 2px solid #e84e40;
+    padding-left: 10px;
+    list-style: none;
+}
+.taglist {
+    padding: 5px;
+    margin-left: 20px;
+    width: 220px;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 4px;
+    margin-bottom: 100px;
+}
+
+.tagitem {
+    padding-right: 10px;
+    white-space: nowrap;
+}
+
+.tagitem a {
+    color: #e84e40;
+}
+
+.tagitem a.current {
+    font-weight: bold;
+}
+
+.tagitem a:hover {
+    color:#64dd17;
+}
+
+.tagnumber {
+    padding-left: 1px;
+}
+.referrence {
+  border-top: 1px solid #e6e6e6;
+}
+.referrence > a {
+  display: block;
+  border-bottom: none;
+}
+/*@media only screen and (min-width:960px){
 
 }
 
@@ -281,6 +559,35 @@ h1 .article .headerlink{display:none}
 }
 @media only screen and (min-width:480px){
 
+}*/
+@media only screen and (max-width:800px) {
+    .langselector {display:none;}
+    .footer { display: block; }
+    #footercenter {flex-direction: column;}
+    #footercopyright {padding-top: 15px; width: 100%;}
+}
+
+@media only screen and (min-width:960px) {
+    .main { flex-direction: row; }
+    .article { width: 820px; margin-left: 280px;}
+    .drawer { width: 280px; position:fixed; padding-top:90px; padding-bottom:96px;}
+/*    .backdrop{background:#f2f2f2}
+    .backdrop-paper:after{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05)}*/
+}
+
+@media only screen and (max-width:959px) {
+    .main { flex-direction: column-reverse; flex-wrap: wrap;}
+    .article { background-color: #ffffff;}
+    .drawer {position: relative; width: 100%; padding-top:0px;padding-bottom:30px; background-color: #eeeeee; z-index: 1;}
+    /*.backdrop,.backdrop-paper {display: none;}*/
+    .previous, .next{display: none;}
+}
+
+@media only screen and (max-width:1100px) {
+  #sidebar-toc { display: none;}
+}
+
+@media only screen and (min-width:1200px){
 }
 @media print{.drawer,.footer,.header,.headerlink{display:none}
 
