custom.cssのスタイルをapplication.cssにマージ
custom.cssを製品ごとのカスタマイズに使っていけるようにするため、現状のcustom.cssの内容をapplication.cssにマージしました

--- a/static/stylesheets/custom.css
+++ b/static/stylesheets/custom.css
@@ -1,303 +1,3 @@
-.header{width:100%;}
-.header-logo-base{ width: 300px; float:left;}
-.header-logo{ padding:5px; width: 245px; height:53px;}
-
-.searchbox {
-  float: right;
-  width: 28em;
-  height: 36px;
-  margin-top: 6px;
-  margin-right: 6px;
-  box-sizing: border-box;
-  border: 1px solid #e6e6e6;
-  position: relative;
-  border-radius: 4px;
-}
-
-#headerSearchBox_form {
-  height: 100%;
-}
-#headerSearchBox_input {
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  padding: 0 63px 0 12px;
-  border: none;
-  color: #a7a7a7;
-  background-color: #f6f6f6;
-  float: left;
-}
-#headerSearchBox_button {
-  height: 100%;
-  width: 52px;
-  background: url(/img/header_search.png) no-repeat center center #f0f0f0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border: none;
-  cursor: pointer;
-}
-
-.langselector {
-    margin-top: 3px;
-    width: 100px;
-    font-size: 1em;
-    white-space: nowrap;
-    float: right;
-    list-style-type: none;
-    padding: 3px;
-}
-
-#langlist {
-    width: 80px;
-    float: right;
-}
-
-#langlist li a:hover { 
-    font-weight: bold; 
-} 
-
-.breadcrumbs {
-  font-size: 80%;
-}
-
-.breadcrumbs ul {
-  list-style-type: none;
-}
-.breadcrumbs li {
-  display: inline;
-  margin-left: 0px;
-}
-.breadcrumbs li:after {
-    font-family: icon;
-    content: "\E602";
-    font-weight: bold;
-}
-.breadcrumbs li:last-child:after {
-  content: '';
-}
-
-.article ul > li:before {
-  content: '';
-}
-
-.main{display: flex; margin-left: 0px;}
-.backdrop-paper{max-width:900px;margin-left: 0px;}
-
-.article {position: relative;}
-
-.drawer .scrollable{position: static;}
-.drawer{height:100%; overflow:auto; margin-bottom: 80px;}
-.wrapper{max-width: 900px;}
-
-.article .wrapper {
-    margin-top: 60px; padding-top: 0px;
-}
-
-.copyright{margin-bottom:64px}
-.results{height:auto;top:64px}
-.results .scrollable{position:static;max-height:413px}
-
-.footer {
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height:92px
-}
-
-.previous, .next {
-    font-size: 120%; 
-    display: flex;
-    flex-basis:15%;
-    align-self: flex-end;
-    min-width: 80px;
-    padding: 10px;
-}
-
-.next {
-    justify-content : flex-end;
-}
-
-.prevbutton {font-size: 200%;}
-.prevpage {align-self: flex-end;}
-.nextbutton {text-align: right; font-size: 200%; }
-.nextpage {align-self: flex-end;}
-
-#footercenter {display:flex; flex-direction:row; font-size: 120%; margin-top: 20px; line-height: 1.5em;}
-#footerlinks {display:flex; flex-basis: auto; padding-left: 20px;}
-#footerlinks ul li {display: inline-block; margin-right: 1em;}
-#footerlinks ul li a{padding-right: 0.3em; }
-#footercopyright {width: 50%; padding-left: 20px;}
-
-#sidebar-toc {
-    position: fixed;
-    right: 0px;
-    width: 200px;
-    height: 100%;
-    padding-top: 60px;
-    float: right;
-    overflow: auto;
-    background-color: #eeeeee;
-    font-size: 12px;
-    line-height: 13px;
-}
-
-#TableOfContents li {
-    margin-left:12px;
-    padding: 3px;
-    cursor: pointer;
-    padding-top: 5px;
-}
-
-#TableOfContents li a:before{
-    font-family: icon;
-    content:"\e602";
-}
-
-#TableOfContents li a {
-   color: #777777;
-   text-decoration: none;
-   border-bottom: 0px;
-}
-
-#TableOfContents li a:hover {
-    color:#e84e40;
-}
-
-#TableOfContents li a.current {
-    font-weight: bold;
-    color: #e84e40;
-}
-
-#mainmenu {
-    display: block;
-    margin-bottom: 30px;
-}
-
-#mainmenu li { 
-    margin-left:12px;
-    padding: 3px;
-    cursor: pointer;
-} 
-
-#mainmenu li span::after {
-    font-family: icon;
-    content: "\E602";
-    font-weight: bold;
-    color: #e84e40;
-} 
-
-#mainmenu li span.closed{ 
-    transform: rotate(0deg);
-} 
-
-#mainmenu li span.expand{ 
-    transform: rotate(90deg);
-} 
-
-#mainmenu li a:hover{
-    color: #e84e40;
-}
-
-#mainmenu li a.current{
-    font-weight: bold;
-    color: #e84e40;
-}
-
-#mainmenu li ul{ 
-    display: none; 
-} 
-
-#mainmenu li ul.opened{ 
-    display: block; 
-} 
-
-#mainmenu li ul li{ 
-    border-left: 2px solid #e84e40;
-    padding-left: 10px;
-    list-style: none; 
-} 
-
-.taglist {
-    padding: 5px;
-    margin-left: 20px;
-    width: 220px;
-    height: 100%;
-    background-color: #fff;
-    border-radius: 4px;
-    margin-bottom: 100px;
-}
-
-.tagitem {
-    padding-right: 10px;
-    white-space: nowrap;
-}
-
-.tagitem a {
-    color: #e84e40;
-}
-
-.tagitem a.current {
-    font-weight: bold;
-}
-
-.tagitem a:hover {
-    color:#64dd17;
-}
-
-.tagnumber {
-    padding-left: 1px;
-}
-
-.nfarticle {
-    margin-left: 40px;
-    font-size: 14px;
-    line-height: 1.7em;
-}
-
-.nfarticle a{color:#e84e40}
-
-.nftitle {
-    color: #e84e40;
-    font-size: 1.5em;
-    padding-top: 120px;
-    padding-bottom: 40px;
-}
-
-.nfdetail {
-    margin-bottom: 10px;
-}
-
-.nflink {
-    line-height: 1.5em;
-}
-
-@media only screen and (max-width:800px) {
-    .langselector {display:none;}
-    .footer { display: block; }
-    #footercenter {flex-direction: column;}
-    #footercopyright {padding-top: 15px; width: 100%;}
-}
-
-@media only screen and (min-width:960px) {
-    .main { flex-direction: row; }
-    .article { width: 640px; margin-left: 260px;}
-    .drawer { width: 260px; position:fixed; padding-top:60px; padding-bottom:96px;}
-    .backdrop{background:#f2f2f2}
-    .backdrop-paper:after{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05)}
-}
-
-@media only screen and (max-width:959px) {
-    .main { flex-direction: column-reverse; flex-wrap: wrap;}
-    .article { background-color: #ffffff;}
-    .drawer {position: relative; width: 100%; padding-top:0px;padding-bottom:30px; background-color: #eeeeee; z-index: 1;}
-    .backdrop,.backdrop-paper {display: none;}
-    .previous, .next{display: none;}
-}
-
-@media only screen and (max-width:1100px) {
-  #sidebar-toc { display: none;}
-}
-
-@media only screen and (min-width:1200px){
-}
+/* --------------------------------------------
+Customize the site design for each product.
+-------------------------------------------- */
