--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -154,7 +154,8 @@ pre span{-webkit-transition:color .25s;transition:color .25s}
 .copyright a{-webkit-transition:color .25s;transition:color .25s}
 .ios.standalone .article{background:-webkit-linear-gradient(top,#fff 50%,#e84e40 0);background:linear-gradient(180deg,#fff 50%,#e84e40 0)}
 .ios.standalone .article .wrapper{background:-webkit-linear-gradient(top,#fff 50%,#fff 0);background:linear-gradient(180deg,#fff 50%,#fff 0)}
-.article a,.article h1,.article h2{color:#e84e40}
+.article a {color: #2869ab}
+/*.article h1,.article h2{color:#e84e40}*/
 .article code{background:#eee}
 .article kbd{color:#555;background-color:#fcfcfc;border:1px solid #ccc;border-bottom-color:#bbb;border-radius:3px;box-shadow:inset 0 -1px 0 #bbb}
 /*.article h1{border-bottom:1px solid rgba(0,0,0,.12)}*/
@@ -473,7 +474,7 @@ h1 .article .headerlink{display:none}
 
 #mainmenu li a.current{
     font-weight: bold;
-    color: #e84e40;
+    /*color: #e84e40;*/
 }
 
 #mainmenu li ul{
