--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -101,7 +101,7 @@ hr{display:block;height:1px;padding:0;margin:0}
 .header .stretch{padding:0 20px}
 .stretch .title{display:table-cell;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
 .header .stretch .title{font-size:18px;padding:13px 0}
-.main{display:flex;max-width:1300px;margin-left:auto;margin-right:auto}
+.main{display:flex;max-width:1300px;margin:56px auto 0 auto;}
 body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 .no-fontface body,.no-fontface input,body,input{font-family:Helvetica Neue,Helvetica,Arial,sans-serif}
 .no-fontface code,.no-fontface kbd,.no-fontface pre,code,kbd,pre{font-family:Courier New,Courier,monospace}
@@ -120,7 +120,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .repo a:focus,.repo a:hover{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05);opacity:.8}
 .repo a .count{background:rgba(0,0,0,.26);color:#fff;border-radius:0 3px 3px 0}
 .repo a .count:before{border-width:15px 5px 15px 0;border-color:transparent rgba(0,0,0,.26);border-style:solid}
-.drawer{height:100%; overflow:auto; margin-bottom: 80px;width:280px;line-height:1em;border-right: 1px solid #e6e6e6;}
+.drawer{height:calc(100% - 56px); overflow:auto; width:280px;line-height:1em;border-right: 1px solid #e6e6e6;}
 .ios .drawer{overflow:scroll;-webkit-overflow-scrolling:touch}
 .drawer .toc li a{display:block;padding:14.5px 24px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .drawer .toc li.anchor a{margin-left:12px;padding:10px 24px 10px 12px}
@@ -167,19 +167,6 @@ pre span{-webkit-transition:color .25s;transition:color .25s}
 .article table td{border-top:1px solid rgba(0,0,0,.05)}
 .article blockquote{border-left:2px solid rgba(0,0,0,.54);color:rgba(0,0,0,.54)}
 /*.footer{background:#e84e40;color:#fff}*/
-.footer::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  width: 100%;
-  height: 4px;
-  z-index: 1;
-  background-image: radial-gradient(circle farthest-corner at left bottom, #e94f90 0%, rgba(233, 79, 144, .01) 100%), radial-gradient(circle farthest-corner at right bottom, #287bf4 0%, rgba(40, 123, 244, .01) 100%);
-}
-.footer a{border:none}
 .copyright{color:rgba(0,0,0,.54)}
 .pagination a .button,.pagination a .title{color:#fff}
 .pagination .direction{color:hsla(0,0%,100%,.7)}
@@ -217,7 +204,8 @@ h1 .article .headerlink{display:none}
 .article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
 .article .data table{display:inline-block;margin:0 16px;text-align:left}
 .footer {
-  position:absolute;
+  position:relative;
+  background: #fff;
   bottom:0;
   left:0;
   right:0;
@@ -225,8 +213,22 @@ h1 .article .headerlink{display:none}
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
-  height:92px
+  height:92px;
+  width: 100%;
 }
+.footer::before {
+  content: '';
+  display: block;
+  position: absolute;
+  /*top: 0;*/
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 4px;
+  z-index: 1;
+  background-image: radial-gradient(circle farthest-corner at left bottom, #e94f90 0%, rgba(233, 79, 144, .01) 100%), radial-gradient(circle farthest-corner at right bottom, #287bf4 0%, rgba(40, 123, 244, .01) 100%);
+}
+.footer a{border:none}
 .previous, .next {
     font-size: 120%;
     display: flex;
@@ -567,7 +569,7 @@ h1 .article .headerlink{display:none}
 @media only screen and (min-width:960px) {
     .main { flex-direction: row; }
     .article { width: 820px; margin-left: 280px;}
-    .drawer { width: 280px; position:fixed; padding-top:90px; padding-bottom:96px;}
+    .drawer { width: 280px; position:fixed; padding-bottom: 100px}
 /*    .backdrop{background:#f2f2f2}
     .backdrop-paper:after{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05)}*/
 }
