--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -186,9 +186,35 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .ios.standalone .article h3,.ios.standalone .article h4{padding-top:20px;margin-top:0}
 .article .headerlink{float:right;margin-left:20px;font-size:14px}
 h1 .article .headerlink{display:none}
-.article ol,.article p,.article ul{margin-top:1.5em}
-.article li,.article li ol,.article li ul{margin-top:.75em}
-.article li{margin-left:18px}
+.article ol,.article p,.article ul{margin-top:1em}
+.article ol {
+  counter-reset: li;
+  list-style: none;
+}
+.article ol>li {
+  position: relative;
+  padding: 5px 0 5px 50px;
+  margin: 0 0 15px 5px;
+}
+.article ol>li:before {
+  content: counter(li);
+  counter-increment: li;
+  position: absolute;
+  height: 100%;
+  width: 30px;
+  top: 0;
+  left: 0;
+  padding-right:10px;
+  color: #999;
+  font-size: 170%;
+  font-weight: 600;
+  line-height: 33px;
+  text-align: right;
+  border-right: 1px solid #e6e6e6;
+}
+/*.article li{margin-left:10px}*/
+
+/*.article li,.article li ol,.article li ul{margin-top:.75em}*/
 .article li p{display:inline}
 /*.article ul>li:before{content:"\e602";display:block;float:left;font-family:Icon;font-size:16px;width:1.2em;margin-left:-1.2em;vertical-align:-.1em}*/
 .article p>code{white-space:nowrap;padding:2px 4px}
@@ -204,7 +230,7 @@ h1 .article .headerlink{display:none}
 .article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
 .article .data table{display:inline-block;margin:0 16px;text-align:left}
 .footer {
-  position:relative;
+  position:absolute;
   background: #fff;
   bottom:0;
   left:0;
@@ -571,7 +597,7 @@ h1 .article .headerlink{display:none}
 
 @media only screen and (min-width:960px) {
     .main { flex-direction: row; }
-    .article { width: 820px; margin-left: 280px;}
+    .article { width: 820px; margin-left: 280px; margin-bottom: 92px;}
     .drawer { width: 280px; position:fixed; padding-bottom: 100px}
 /*    .backdrop{background:#f2f2f2}
     .backdrop-paper:after{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05)}*/
