--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -160,7 +160,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .article kbd{color:#555;background-color:#fcfcfc;border:1px solid #ccc;border-bottom-color:#bbb;border-radius:3px;box-shadow:inset 0 -1px 0 #bbb}
 /*.article h1{border-bottom:1px solid rgba(0,0,0,.12)}*/
 .article a{border-bottom:1px dotted}
-.article a:focus,.article a:hover{color:#00bfa5}
+/*.article a:focus,.article a:hover{color:#00bfa5}*/
 .article .headerlink{color:rgba(0,0,0,.26);border:none}
 .article table{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);border-radius:3px}
 .article table th{background:#ee7a70;color:#fff}
@@ -404,9 +404,9 @@ h1 .article .headerlink{display:none}
     font-weight: bold;
 }
 /*パンくず*/
-.breadcrumbs {
+/*.breadcrumbs {
   font-size: 80%;
-}
+}*/
 .breadcrumbs ul {
   list-style-type: none;
 }
@@ -418,6 +418,7 @@ h1 .article .headerlink{display:none}
     font-family: icon;
     content: "\E602";
     font-weight: bold;
+    vertical-align: middle;
 }
 .breadcrumbs li:last-child:after {
   content: '';
