--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,7 @@
     </div>
     <div class="article">
         <div class="wrapper"> 
-            <div class="breadcrumb">{{- partial "breadcrumb" . -}}</div>
+            <nav class="breadcrumb">{{- partial "breadcrumb" . -}}</nav>
             <h1>{{ .Title }}</h1>
             {{ .Content }}
             
