--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -50,24 +50,24 @@
     <link rel="stylesheet" href="{{ "stylesheets/application.css" | absURL }}">
     <link rel="stylesheet" href="{{ "stylesheets/temporary.css" | absURL }}">
     <link rel="stylesheet" href="{{ "stylesheets/palettes.css" | absURL }}">
-        
+
     <link rel="stylesheet" href="{{ with .Site.Params.highlight_css }}{{ . | absURL }}{{ else }}{{ "stylesheets/highlight/highlight.css" | absURL }}{{ end }}">
 
     <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | absURL }}">
-        
+
     <link rel="stylesheet" href="{{ "stylesheets/custom.css" | absURL }}">
 
-    <link href="//js.cybozu.com/font-awesome/v4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    
+    <link href="//js.cybozu.com/font-awesome/v5.0.9/css/fontawesome-all.min.css" rel="stylesheet">
+
     {{if .IsHome}}
     <link rel="stylesheet" href="{{ "stylesheets/home.css" | absURL }}">
     {{end}}
-    
+
     {{if eq .Params.type "search_result"}}
     <link href="//c.marsflag.com/mf/mfx/css/mfx-serp.css" rel="stylesheet" type="text/css" media="all" charset="UTF-8">
     <link rel="stylesheet" href="{{ "stylesheets/search_result.css" | absURL }}">
     {{end}}
-    
+
     {{/* set default values if no custom ones are defined */}}
     {{ $text := or .Site.Params.font.text "Roboto" }}
     {{ $code := or .Site.Params.font.code "Roboto Mono" }}
@@ -84,10 +84,10 @@
     <script src="{{ "javascripts/modernizr.js" | absURL }}"></script>
     <script src="https://js.cybozu.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="{{ "javascripts/js.cookie.js" | absURL }}"></script>
-    
+
     <script src="{{ "javascripts/transition.min.js" | absURL }}"></script>
     <script src="{{ "javascripts/zoom.js" | absURL }}"></script>
-            
+
     <script src="{{ "javascripts/custom.js" | absURL }}"></script>
 
   </head>
